first version of personal web

--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -49,3 +49,9 @@ th {
 th {
   font-weight: 600;
 }
+
+// a:visited {
+//   color: deepskyblue;
+//   background-color: transparent;
+//   text-decoration: none;
+// }
